miscTests/export_tests/invalid/functor.ml

(* need type annotation *)
module%export Four = Increment(Three)

